fix table rounds and logic save round